--- a/data_extract_BC.ipynb
+++ b/data_extract_BC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1824,13 +1824,7 @@
       "OrderedDict([('Reported_Date', '2020-04-23'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-23'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-23'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-04-23'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "OrderedDict([('Reported_Date', '2020-04-23'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-23'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-23'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-23'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -1999,7 +1993,13 @@
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -2666,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2751,7 +2751,7 @@
        "4    2020-02-11           Interior   F     30-39           Lab-diagnosed"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2766,9 +2766,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "mydata0 = pd.read_csv(\"workingfile.csv\", header = None, prefix=\"var\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
