--- a/data_extract_BC.ipynb
+++ b/data_extract_BC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,6 @@
       "OrderedDict([('Reported_Date', '2020-03-16'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-16'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-16'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-03-16'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-16'), ('HA', 'Interior'), ('Sex', 'F'), ('Age_Group', '70-79'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-16'), ('HA', 'Interior'), ('Sex', 'M'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-16'), ('HA', 'Interior'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -409,6 +408,7 @@
       "OrderedDict([('Reported_Date', '2020-03-20'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-20'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-20'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-03-20'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-21'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-21'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-21'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -799,7 +799,6 @@
       "OrderedDict([('Reported_Date', '2020-03-26'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-26'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-26'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-03-26'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-27'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-27'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '70-79'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-03-27'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -1993,13 +1992,7 @@
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-26'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -2639,14 +2632,58 @@
       "OrderedDict([('Reported_Date', '2020-06-02'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-02'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '70-79'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-02'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-06-02'), ('HA', 'Vancouver Coastal'), ('Sex', 'U'), ('Age_Group', 'Unknown'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-06-03'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-02'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '10-19'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-03'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-03'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '10-19'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-04'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-04'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-04'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-06-04'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n"
+      "OrderedDict([('Reported_Date', '2020-06-04'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '<10'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '10-19'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '10-19'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-05'), ('HA', 'Northern'), ('Sex', 'F'), ('Age_Group', '80-89'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-06'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '70-79'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-06'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '80-89'), ('Classification_Reported', 'Lab-diagnosed')])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('Reported_Date', '2020-06-06'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-06'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-06'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-06'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-06'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '70-79'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '<10'), ('Classification_Reported', 'Epi-linked')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-07'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Epi-linked')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '<10'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '<10'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Northern'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n"
      ]
     }
    ],
@@ -2763,10 +2800,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_BC[\"Province\"] = \"British Colombia\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Reported_Date</th>\n",
+       "      <th>HA</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_Group</th>\n",
+       "      <th>Classification_Reported</th>\n",
+       "      <th>Province</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>Vancouver Coastal</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40-49</td>\n",
+       "      <td>Lab-diagnosed</td>\n",
+       "      <td>British Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-02-02</td>\n",
+       "      <td>Vancouver Coastal</td>\n",
+       "      <td>F</td>\n",
+       "      <td>50-59</td>\n",
+       "      <td>Lab-diagnosed</td>\n",
+       "      <td>British Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-02-05</td>\n",
+       "      <td>Vancouver Coastal</td>\n",
+       "      <td>F</td>\n",
+       "      <td>20-29</td>\n",
+       "      <td>Lab-diagnosed</td>\n",
+       "      <td>British Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-02-05</td>\n",
+       "      <td>Vancouver Coastal</td>\n",
+       "      <td>M</td>\n",
+       "      <td>30-39</td>\n",
+       "      <td>Lab-diagnosed</td>\n",
+       "      <td>British Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-02-11</td>\n",
+       "      <td>Interior</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30-39</td>\n",
+       "      <td>Lab-diagnosed</td>\n",
+       "      <td>British Colombia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Reported_Date                 HA Sex Age_Group Classification_Reported  \\\n",
+       "0    2020-01-26  Vancouver Coastal   M     40-49           Lab-diagnosed   \n",
+       "1    2020-02-02  Vancouver Coastal   F     50-59           Lab-diagnosed   \n",
+       "2    2020-02-05  Vancouver Coastal   F     20-29           Lab-diagnosed   \n",
+       "3    2020-02-05  Vancouver Coastal   M     30-39           Lab-diagnosed   \n",
+       "4    2020-02-11           Interior   F     30-39           Lab-diagnosed   \n",
+       "\n",
+       "           Province  \n",
+       "0  British Colombia  \n",
+       "1  British Colombia  \n",
+       "2  British Colombia  \n",
+       "3  British Colombia  \n",
+       "4  British Colombia  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_BC.head()"
+   ]
   }
  ],
  "metadata": {
