--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,13 @@
       "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -1785,13 +1791,7 @@
       "OrderedDict([('Reported_Date', '2020-04-21'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-22'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '89+'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-22'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-04-22'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "OrderedDict([('Reported_Date', '2020-04-22'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-22'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '80-89'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-22'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-04-22'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -2682,7 +2682,7 @@
       "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Northern'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-08'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Vancouver Coastal'), ('Sex', 'U'), ('Age_Group', 'Unknown'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '80-89'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '10-19'), ('Classification_Reported', 'Lab-diagnosed')])\n",
@@ -2694,7 +2694,21 @@
       "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
       "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
-      "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '80-89'), ('Classification_Reported', 'Lab-diagnosed')])\n"
+      "OrderedDict([('Reported_Date', '2020-06-09'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '80-89'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Vancouver Coastal'), ('Sex', 'U'), ('Age_Group', 'Unknown'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '10-19'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '60-69'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Fraser'), ('Sex', 'F'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Fraser'), ('Sex', 'M'), ('Age_Group', '20-29'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '30-39'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Vancouver Coastal'), ('Sex', 'M'), ('Age_Group', '40-49'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-10'), ('HA', 'Vancouver Coastal'), ('Sex', 'F'), ('Age_Group', '50-59'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-11'), ('HA', 'Vancouver Coastal'), ('Sex', 'U'), ('Age_Group', 'Unknown'), ('Classification_Reported', 'Lab-diagnosed')])\n",
+      "OrderedDict([('Reported_Date', '2020-06-11'), ('HA', 'Vancouver Coastal'), ('Sex', 'U'), ('Age_Group', 'Unknown'), ('Classification_Reported', 'Lab-diagnosed')])\n"
      ]
     }
    ],
@@ -2706,6 +2720,8 @@
     "import requests\n",
     "import time\n",
     "from sqlalchemy import create_engine\n",
+    "import json\n",
+    "from flask import jsonify\n",
     "CSV_URL = 'http://www.bccdc.ca/Health-Info-Site/Documents/BCCDC_COVID19_Dashboard_Case_Details.csv'\n",
     "with requests.Session() as s:\n",
     "   download = s.get(CSV_URL)\n",
@@ -2718,7 +2734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2803,7 +2819,7 @@
        "4    2020-02-11           Interior   F     30-39           Lab-diagnosed"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2815,9 +2831,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Table 'BC' already exists.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-0bd0a1bfb8e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'postgresql://postgres:KRISS34GUN@localhost:5432/BC_database'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mBC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'BC'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(self, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[1;32m   2660\u001b[0m             \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2661\u001b[0m             \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2662\u001b[0;31m             \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2663\u001b[0m         )\n\u001b[1;32m   2664\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(frame, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[1;32m    519\u001b[0m         \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    520\u001b[0m         \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 521\u001b[0;31m         \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    522\u001b[0m     )\n\u001b[1;32m    523\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(self, frame, name, if_exists, index, index_label, schema, chunksize, dtype, method)\u001b[0m\n\u001b[1;32m   1314\u001b[0m             \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1315\u001b[0m         )\n\u001b[0;32m-> 1316\u001b[0;31m         \u001b[0mtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1317\u001b[0m         \u001b[0mtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1318\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdigit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mislower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mcreate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    644\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    645\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mif_exists\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"fail\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 646\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Table '{self.name}' already exists.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    647\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mif_exists\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"replace\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    648\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpd_sql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mschema\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Table 'BC' already exists."
+     ]
+    }
+   ],
    "source": [
     "engine = create_engine('postgresql://postgres:KRISS34GUN@localhost:5432/BC_database')\n",
     "BC.to_sql('BC', engine)"
@@ -2825,7 +2857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2834,110 +2866,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Reported_Date</th>\n",
-       "      <th>HA</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age_Group</th>\n",
-       "      <th>Classification_Reported</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2020-01-26</td>\n",
-       "      <td>Vancouver Coastal</td>\n",
-       "      <td>M</td>\n",
-       "      <td>40-49</td>\n",
-       "      <td>Lab-diagnosed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2020-02-02</td>\n",
-       "      <td>Vancouver Coastal</td>\n",
-       "      <td>F</td>\n",
-       "      <td>50-59</td>\n",
-       "      <td>Lab-diagnosed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2020-02-05</td>\n",
-       "      <td>Vancouver Coastal</td>\n",
-       "      <td>F</td>\n",
-       "      <td>20-29</td>\n",
-       "      <td>Lab-diagnosed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2020-02-05</td>\n",
-       "      <td>Vancouver Coastal</td>\n",
-       "      <td>M</td>\n",
-       "      <td>30-39</td>\n",
-       "      <td>Lab-diagnosed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2020-02-11</td>\n",
-       "      <td>Interior</td>\n",
-       "      <td>F</td>\n",
-       "      <td>30-39</td>\n",
-       "      <td>Lab-diagnosed</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index Reported_Date                 HA Sex Age_Group  \\\n",
-       "0      0    2020-01-26  Vancouver Coastal   M     40-49   \n",
-       "1      1    2020-02-02  Vancouver Coastal   F     50-59   \n",
-       "2      2    2020-02-05  Vancouver Coastal   F     20-29   \n",
-       "3      3    2020-02-05  Vancouver Coastal   M     30-39   \n",
-       "4      4    2020-02-11           Interior   F     30-39   \n",
-       "\n",
-       "  Classification_Reported  \n",
-       "0           Lab-diagnosed  \n",
-       "1           Lab-diagnosed  \n",
-       "2           Lab-diagnosed  \n",
-       "3           Lab-diagnosed  \n",
-       "4           Lab-diagnosed  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-13-bf774be5a836>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-bf774be5a836>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return jsonify(j_l)\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "json_file = a.to_json(orient='records')\n",
+    "j_l = json.loads(json_file)\n",
+    "return jsonify(j_l)"
+   ]
   },
   {
    "cell_type": "code",
